--- a/microservices-system/pom.xml
+++ b/microservices-system/pom.xml
@@ -21,7 +21,8 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring-cloud.version>2023.0.1</spring-cloud.version>
+        <spring-cloud.version>2025.0.0</spring-cloud.version>
+        <spring-cloud-openfeign.version>4.1.0</spring-cloud-openfeign.version>
     </properties>
 
     <dependencyManagement>
@@ -48,6 +49,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>${spring-cloud-openfeign.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
