--- a/microservices-system/pom.xml
+++ b/microservices-system/pom.xml
@@ -30,7 +30,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
+                <version>2023.0.3</version> <!-- ✅ COMPATIBLE -->
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
